<resources>
    <string name="app_name">SQLiteLabs</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="designation">Designation</string>
    <string name="save">SAVE</string>
    <string name="back">BACK</string>
    <string name="default_name">Default name</string>
    <string name="default_location">Default location</string>
    <string name="default_designation">Default designation</string>
    <string name="details_saved">Details saved</string>
    <string name="enter_the_user_id">Enter the user id</string>
    <string name="user_id">User Id</string>
    <string name="search">Search</string>
    <string name="enter_user_id">Please, enter a userId</string>
    <string name="default_user">default user</string>
    <string name="user_info">The user with the name %1$s stays at %2$s and works as a %3$s.</string>
    <string name="search_by_id">Search By Id</string>
    <string name="user_not_found">This user was not found</string>
</resources>
