<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
        android:id="@+id/name"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:textSize="16sp"
        android:text="@string/name"/>
        <EditText
            android:id="@+id/name_edittext"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/location"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:textSize="16sp"
            android:text="@string/location"/>
        <EditText
            android:id="@+id/location_edittext"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/designation"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:textSize="16sp"
            android:text="@string/designation"/>
        <EditText
            android:id="@+id/designation_edittext"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_orange_dark"
                android:text="@string/save"
                android:textColor="@android:color/background_light" />

            <Button
                android:id="@+id/btnSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/search_by_id"
                android:textColor="@android:color/background_light" />

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>